--- a/sysam_main/src/main/resources/application.yml
+++ b/sysam_main/src/main/resources/application.yml
@@ -6,8 +6,11 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
+#    数据库地址
     url: jdbc:mysql://localhost:3306/cas?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+#    用户名
     username: root
+#    密码
     password: elitel!@3$
 #mybatis-plus配置
 mybatis-plus:
