--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <spring.shiro.version>1.6.0</spring.shiro.version>
     </properties>
 
     <!--引用模块-->
@@ -88,6 +89,17 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <!--SpringBoot 整合 Shiro-->
+        <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <!--<version>1.5.3</version>-->
+            <version>${spring.shiro.version}</version>
+        </dependency>
+        <!--SpringBoot 整合 Shiro-->
+
+
     </dependencies>
 
     <build>
