修改 - 前后台分离跨域问题， 添加 - 返回数据包装工具类

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,15 @@
         </dependency>
         <!--SpringBoot 整合 Shiro-->
 
+        <!--整合Json-->
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+
 
     </dependencies>
 
