--- a/sysam_common/pom.xml
+++ b/sysam_common/pom.xml
@@ -15,4 +15,9 @@
     <description>Demo project for Spring Boot</description>
 
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
+
 </project>
