--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.2.1</version>
         </dependency>
+        <!--整合validation-->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <!--整合validation-->
     </dependencies>
 
     <build>
