--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>sysam_base</module>
         <module>sysam_task</module>
         <module>sysam_common</module>
+        <module>sysam_generator</module>
     </modules>
 
     <dependencies>
@@ -145,6 +146,30 @@
             <version>2.0.2</version>
         </dependency>
         <!--整合validation-->
+
+        <!-- freemarker模板引擎，用于定义代码生成模板 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+
+        <!-- IP定位插件 -->
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
+        <!-- commons工具 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
