--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,15 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+
+
+        <!-- 数据连接池 druid-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
     </dependencies>
 
     <build>
