--- a/sysam_main/src/main/resources/application.yml
+++ b/sysam_main/src/main/resources/application.yml
@@ -63,6 +63,28 @@ spring:
 #        login-username: admin
 #        login-password: admin
 #        allow: ""
+
+  redis:
+#    Redis 数据库索引（默认为0）
+    database: 0
+#    Redis 服务器地址
+    host: 127.0.0.1
+#    Redis 服务器端口
+    port: 6379
+#    Redis 服务器连接密码
+    password:
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 8
+        # 连接池中的最大空闲连接
+        max-idle: 500
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 2000
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: 10000
+      # 连接超时时间（毫秒）
+      timeout: 5000
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -86,6 +108,11 @@ mybatis-plus:
       logic-delete-value: 0
 #跨域前台端口
 allowOrigins: http://localhost:9999,http://127.0.0.1:9999,http://8.140.170.160:9999
+
+
+#自定义配置
+#custom-redis-config:
+
 
 
 
