修改 - Shiro会话管理模块添加产生的问题

--- a/sysam_base/pom.xml
+++ b/sysam_base/pom.xml
@@ -13,7 +13,8 @@
         <groupId>com.sysam</groupId>
         <artifactId>sysam</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+<!--        <relativePath>../pom.xml</relativePath>-->
+<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>com.sysam</groupId>
     <artifactId>sysam_base</artifactId>
