--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,10 @@
             <artifactId>shiro-redis</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--shiro-redis-->
 
     </dependencies>
