整体 Nacos 注册中心 修改 logback 日志功能 修改 基于 Shiro JWT 实现前后端分离认证

--- a/sysam_base/pom.xml
+++ b/sysam_base/pom.xml
@@ -27,5 +27,26 @@
     </properties>
 
 
+    <!-- 保证项目可以读取配置文件 -->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.yml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
+
 
 </project>
