--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.3.9.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <!--工程基本信息-->
@@ -24,6 +24,8 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.shiro.version>1.6.0</spring.shiro.version>
+        <!-- nacos 版本 -->
+        <alibaba-nacos-boot.version>0.2.7</alibaba-nacos-boot.version>
     </properties>
 
     <!--引用模块-->
@@ -33,11 +35,16 @@
         <module>sysam_task</module>
         <module>sysam_common</module>
         <module>sysam_generator</module>
+        <module>sysam_test</module>
+        <!-- 工作流模块 -->
+<!--        <module>sysam_workflow</module>-->
     </modules>
 
     <dependencies>
+        <!-- -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <!-- 默认 slf4j + Logback -->
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
@@ -204,6 +211,37 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!--shiro-redis-->
+
+
+        <!-- SpringBoot Nacos-->
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+            <version>0.2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-discovery-spring-boot-starter</artifactId>
+            <version>0.2.7</version>
+        </dependency>
+        <!-- nacos：服务注册 -->
+        <!--<dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>2021.0.1.0</version>
+        </dependency>-->
+        <!-- nacos：服务注册 -->
+        <!-- WT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+        <!-- WT -->
 
     </dependencies>
 
