修改日志配置

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,14 @@
         </dependency>
         <!--shiro-redis-->
 
+        <!-- Netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.45.Final</version>
+        </dependency>
+        <!-- Netty -->
+
     </dependencies>
 
     <build>
